Created login and logout requests
